herocomp/HerocParser.py
# Generated from Heroc.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class HerocParser ( Parser ):

    grammarFileName = "Heroc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'do'", "'else'", 
                     "'for'", "'if'", "'long'", "'return'", "'sizeof'", 
                     "'while'", "'!'", "'!='", "'%'", "'%='", "'&'", "'&&'", 
                     "'&='", "'*'", "'*='", "'+'", "'++'", "'+='", "'-'", 
                     "'--'", "'-='", "'/'", "'/='", "':'", "'<'", "'<<'", 
                     "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", 
                     "'>>='", "'?'", "'^'", "'^='", "'|'", "'|='", "'||'", 
                     "'~'", "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "DO", "ELSE", "FOR", 
                      "IF", "LONG", "RETURN", "SIZEOF", "WHILE", "NOT", 
                      "NOT_EQUAL", "MOD", "MOD_ASIGN", "AND", "AND_AND", 
                      "AND_ASSIGN", "STAR", "STAR_ASSIGN", "PLUS", "PLUS_PLUS", 
                      "PLUS_ASSIGN", "MINUS", "MINUS_MINUS", "MINUS_ASSIGN", 
                      "DIV", "DIV_ASSIGN", "COLON", "LESS", "LEFT_SHIFT", 
                      "LEFT_SHIFT_ASSIGN", "LESS_EQUAL", "ASSIGN", "EQUAL", 
                      "GREATER", "GREATER_EQUAL", "RIGHT_SHIFT", "RIGHT_SHIFT_ASSIGN", 
                      "QUESTION", "CARET", "XOR_ASSIGN", "OR", "OR_ASSIGN", 
                      "OR_OR", "TILDE", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "SEMI", 
                      "COMMA", "IDENTIFIER", "CONSTANT", "INT_CONSTANT", 
                      "OCTAL_CONSTANT", "HEX_CONSTANT", "CHAR_CONSTANT", 
                      "STRING", "WHITESPACE", "NEWLINE", "COMMENT" ]

    RULE_sourcefile = 0
    RULE_source = 1
    RULE_variableDeclaration = 2
    RULE_initVariableDeclarationList = 3
    RULE_initDeclaratorVariable = 4
    RULE_initDeclaratorVariableSimple = 5
    RULE_initDeclaratorArray = 6
    RULE_initializer = 7
    RULE_initializerList = 8
    RULE_pointer = 9
    RULE_identifierList = 10
    RULE_functionDefinition = 11
    RULE_unaryOperator = 12
    RULE_assignmentOperator = 13
    RULE_constantExpression = 14
    RULE_expression = 15
    RULE_conditionalExpression = 16
    RULE_logicalOrExpression = 17
    RULE_logicalAndExpression = 18
    RULE_bitwiseOrExpression = 19
    RULE_bitwiseXOrExpression = 20
    RULE_andExpression = 21
    RULE_equalityExpression = 22
    RULE_relationalExpression = 23
    RULE_shiftExpression = 24
    RULE_additiveExpression = 25
    RULE_multiplicativeExpression = 26
    RULE_unaryExpression = 27
    RULE_postfixExpression = 28
    RULE_argumentExpressionList = 29
    RULE_primaryExpression = 30
    RULE_statement = 31
    RULE_compoundStatement = 32
    RULE_blockItemList = 33
    RULE_blockItem = 34
    RULE_functionCallStatement = 35
    RULE_expressionStatement = 36
    RULE_selectionStatement = 37
    RULE_iterationStatement = 38
    RULE_jumpStatement = 39

    ruleNames =  [ "sourcefile", "source", "variableDeclaration", "initVariableDeclarationList", 
                   "initDeclaratorVariable", "initDeclaratorVariableSimple", 
                   "initDeclaratorArray", "initializer", "initializerList", 
                   "pointer", "identifierList", "functionDefinition", "unaryOperator", 
                   "assignmentOperator", "constantExpression", "expression", 
                   "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
                   "bitwiseOrExpression", "bitwiseXOrExpression", "andExpression", 
                   "equalityExpression", "relationalExpression", "shiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "postfixExpression", "argumentExpressionList", "primaryExpression", 
                   "statement", "compoundStatement", "blockItemList", "blockItem", 
                   "functionCallStatement", "expressionStatement", "selectionStatement", 
                   "iterationStatement", "jumpStatement" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    DO=3
    ELSE=4
    FOR=5
    IF=6
    LONG=7
    RETURN=8
    SIZEOF=9
    WHILE=10
    NOT=11
    NOT_EQUAL=12
    MOD=13
    MOD_ASIGN=14
    AND=15
    AND_AND=16
    AND_ASSIGN=17
    STAR=18
    STAR_ASSIGN=19
    PLUS=20
    PLUS_PLUS=21
    PLUS_ASSIGN=22
    MINUS=23
    MINUS_MINUS=24
    MINUS_ASSIGN=25
    DIV=26
    DIV_ASSIGN=27
    COLON=28
    LESS=29
    LEFT_SHIFT=30
    LEFT_SHIFT_ASSIGN=31
    LESS_EQUAL=32
    ASSIGN=33
    EQUAL=34
    GREATER=35
    GREATER_EQUAL=36
    RIGHT_SHIFT=37
    RIGHT_SHIFT_ASSIGN=38
    QUESTION=39
    CARET=40
    XOR_ASSIGN=41
    OR=42
    OR_ASSIGN=43
    OR_OR=44
    TILDE=45
    LEFT_PAREN=46
    RIGHT_PAREN=47
    LEFT_BRACKET=48
    RIGHT_BRACKET=49
    LEFT_BRACE=50
    RIGHT_BRACE=51
    SEMI=52
    COMMA=53
    IDENTIFIER=54
    CONSTANT=55
    INT_CONSTANT=56
    OCTAL_CONSTANT=57
    HEX_CONSTANT=58
    CHAR_CONSTANT=59
    STRING=60
    WHITESPACE=61
    NEWLINE=62
    COMMENT=63

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SourcefileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HerocParser.EOF, 0)

        def source(self):
            return self.getTypedRuleContext(HerocParser.SourceContext,0)


        def getRuleIndex(self):
            return HerocParser.RULE_sourcefile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourcefile" ):
                return visitor.visitSourcefile(self)
            else:
                return visitor.visitChildren(self)




    def sourcefile(self):

        localctx = HerocParser.SourcefileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourcefile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HerocParser.LONG or _la==HerocParser.IDENTIFIER:
                self.state = 80
                self.source(0)


            self.state = 83
            self.match(HerocParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(HerocParser.VariableDeclarationContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(HerocParser.FunctionDefinitionContext,0)


        def source(self):
            return self.getTypedRuleContext(HerocParser.SourceContext,0)


        def getRuleIndex(self):
            return HerocParser.RULE_source

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)



    def source(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HerocParser.SourceContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_source, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HerocParser.LONG]:
                self.state = 86
                self.variableDeclaration()
                pass
            elif token in [HerocParser.IDENTIFIER]:
                self.state = 87
                self.functionDefinition()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 94
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = HerocParser.SourceContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_source)
                        self.state = 90
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 91
                        self.variableDeclaration()
                        pass

                    elif la_ == 2:
                        localctx = HerocParser.SourceContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_source)
                        self.state = 92
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 93
                        self.functionDefinition()
                        pass

             
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LONG(self):
            return self.getToken(HerocParser.LONG, 0)

        def initVariableDeclarationList(self):
            return self.getTypedRuleContext(HerocParser.InitVariableDeclarationListContext,0)


        def SEMI(self):
            return self.getToken(HerocParser.SEMI, 0)

        def getRuleIndex(self):
            return HerocParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = HerocParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(HerocParser.LONG)
            self.state = 100
            self.initVariableDeclarationList()
            self.state = 101
            self.match(HerocParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitVariableDeclarationListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initDeclaratorVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HerocParser.InitDeclaratorVariableContext)
            else:
                return self.getTypedRuleContext(HerocParser.InitDeclaratorVariableContext,i)


        def getRuleIndex(self):
            return HerocParser.RULE_initVariableDeclarationList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitVariableDeclarationList" ):
                return visitor.visitInitVariableDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def initVariableDeclarationList(self):

        localctx = HerocParser.InitVariableDeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_initVariableDeclarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.initDeclaratorVariable()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HerocParser.COMMA:
                self.state = 104
                self.match(HerocParser.COMMA)
                self.state = 105
                self.initDeclaratorVariable()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitDeclaratorVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initDeclaratorVariableSimple(self):
            return self.getTypedRuleContext(HerocParser.InitDeclaratorVariableSimpleContext,0)


        def pointer(self):
            return self.getTypedRuleContext(HerocParser.PointerContext,0)


        def initDeclaratorArray(self):
            return self.getTypedRuleContext(HerocParser.InitDeclaratorArrayContext,0)


        def getRuleIndex(self):
            return HerocParser.RULE_initDeclaratorVariable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclaratorVariable" ):
                return visitor.visitInitDeclaratorVariable(self)
            else:
                return visitor.visitChildren(self)




    def initDeclaratorVariable(self):

        localctx = HerocParser.InitDeclaratorVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initDeclaratorVariable)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HerocParser.STAR:
                    self.state = 111
                    self.pointer()


                self.state = 114
                self.initDeclaratorVariableSimple()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HerocParser.STAR:
                    self.state = 115
                    self.pointer()


                self.state = 118
                self.initDeclaratorArray()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitDeclaratorVariableSimpleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(HerocParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(HerocParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HerocParser.RULE_initDeclaratorVariableSimple

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclaratorVariableSimple" ):
                return visitor.visitInitDeclaratorVariableSimple(self)
            else:
                return visitor.visitChildren(self)




    def initDeclaratorVariableSimple(self):

        localctx = HerocParser.InitDeclaratorVariableSimpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initDeclaratorVariableSimple)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(HerocParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(HerocParser.IDENTIFIER)
                self.state = 123
                self.match(HerocParser.ASSIGN)
                self.state = 124
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitDeclaratorArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(HerocParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HerocParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HerocParser.ExpressionContext,i)


        def initializerList(self):
            return self.getTypedRuleContext(HerocParser.InitializerListContext,0)


        def getRuleIndex(self):
            return HerocParser.RULE_initDeclaratorArray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclaratorArray" ):
                return visitor.visitInitDeclaratorArray(self)
            else:
                return visitor.visitChildren(self)




    def initDeclaratorArray(self):

        localctx = HerocParser.InitDeclaratorArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initDeclaratorArray)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(HerocParser.IDENTIFIER)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 128
                    self.match(HerocParser.LEFT_BRACKET)
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HerocParser.SIZEOF) | (1 << HerocParser.NOT) | (1 << HerocParser.AND) | (1 << HerocParser.STAR) | (1 << HerocParser.PLUS_PLUS) | (1 << HerocParser.MINUS_MINUS) | (1 << HerocParser.TILDE) | (1 << HerocParser.LEFT_PAREN) | (1 << HerocParser.LEFT_BRACE) | (1 << HerocParser.IDENTIFIER) | (1 << HerocParser.CONSTANT) | (1 << HerocParser.STRING))) != 0):
                        self.state = 129
                        self.expression()


                    self.state = 132
                    self.match(HerocParser.RIGHT_BRACKET)
                    self.state = 135 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HerocParser.LEFT_BRACKET):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(HerocParser.IDENTIFIER)
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 138
                    self.match(HerocParser.LEFT_BRACKET)
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HerocParser.SIZEOF) | (1 << HerocParser.NOT) | (1 << HerocParser.AND) | (1 << HerocParser.STAR) | (1 << HerocParser.PLUS_PLUS) | (1 << HerocParser.MINUS_MINUS) | (1 << HerocParser.TILDE) | (1 << HerocParser.LEFT_PAREN) | (1 << HerocParser.LEFT_BRACE) | (1 << HerocParser.IDENTIFIER) | (1 << HerocParser.CONSTANT) | (1 << HerocParser.STRING))) != 0):
                        self.state = 139
                        self.expression()


                    self.state = 142
                    self.match(HerocParser.RIGHT_BRACKET)
                    self.state = 145 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==HerocParser.LEFT_BRACKET):
                        break

                self.state = 147
                self.match(HerocParser.ASSIGN)
                self.state = 148
                self.match(HerocParser.LEFT_BRACE)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HerocParser.SIZEOF) | (1 << HerocParser.NOT) | (1 << HerocParser.AND) | (1 << HerocParser.STAR) | (1 << HerocParser.PLUS_PLUS) | (1 << HerocParser.MINUS_MINUS) | (1 << HerocParser.TILDE) | (1 << HerocParser.LEFT_PAREN) | (1 << HerocParser.LEFT_BRACE) | (1 << HerocParser.IDENTIFIER) | (1 << HerocParser.CONSTANT) | (1 << HerocParser.STRING))) != 0):
                    self.state = 149
                    self.initializerList()


                self.state = 152
                self.match(HerocParser.RIGHT_BRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitializerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HerocParser.ExpressionContext,0)


        def initializerList(self):
            return self.getTypedRuleContext(HerocParser.InitializerListContext,0)


        def getRuleIndex(self):
            return HerocParser.RULE_initializer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializer" ):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = HerocParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initializer)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(HerocParser.LEFT_BRACE)
                self.state = 157
                self.initializerList()
                self.state = 158
                self.match(HerocParser.RIGHT_BRACE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.match(HerocParser.LEFT_BRACE)
                self.state = 161
                self.initializerList()
                self.state = 162
                self.match(HerocParser.COMMA)
                self.state = 163
                self.match(HerocParser.RIGHT_BRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitializerListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initializer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HerocParser.InitializerContext)
            else:
                return self.getTypedRuleContext(HerocParser.InitializerContext,i)


        def getRuleIndex(self):
            return HerocParser.RULE_initializerList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitializerList" ):
                return visitor.visitInitializerList(self)
            else:
                return visitor.visitChildren(self)




    def initializerList(self):

        localctx = HerocParser.InitializerListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initializerList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.initializer()
            self.state = 172
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 168
                    self.match(HerocParser.COMMA)
                    self.state = 169
                    self.initializer() 
                self.state = 174
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PointerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HerocParser.RULE_pointer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPointer" ):
                return visitor.visitPointer(self)
            else:
                return visitor.visitChildren(self)




    def pointer(self):

        localctx = HerocParser.PointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pointer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 175
                self.match(HerocParser.STAR)
                self.state = 178 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==HerocParser.STAR):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(HerocParser.IDENTIFIER)
            else:
                return self.getToken(HerocParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return HerocParser.RULE_identifierList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = HerocParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(HerocParser.IDENTIFIER)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HerocParser.COMMA:
                self.state = 181
                self.match(HerocParser.COMMA)
                self.state = 182
                self.match(HerocParser.IDENTIFIER)
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)
